--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,35 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  font-size: 8px;
+}
+
+.step-counter {
+  display: flex;
+  align-items: center;
+}
+
+.subtract-btn {
+  background-color: #608F2B;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  color: white;
+  padding-top: 1.5vh;
+  padding-bottom: 1.5vh;
+}
+
+.step-number {
+  padding-left: 10px;
+  padding-right: 10px;
+  border: solid;
+  border-color: #B5B4B5;
+}
+
+.add-btn {
+  background-color: #608F2B;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  color: white;
+  padding-top: 1.5vh;
+  padding-bottom: 1.5vh;
 }
